# GenAI-Capstone

./: BEGINNERS_GUIDE.md  QUICK_FIX_SUMMARY.md  README.md  demo_pipeline.py  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  models.py
app/agents/: actions.py  quality_agent.py
app/catalogue/: explorer.py
app/observability/: metrics.py
app/pipeline/: processor.py  service.py
app/rag/: ingestion.py  retriever.py
app/services/: chat_service.py
app/ui/: streamlit_app.py
data/chroma/: chroma.sqlite3
data/chroma/49c60c63-3d5a-46af-9776-1e467fd3ef3d/: index_metadata.pickle
de_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: data_catalogue.json  tool_selection_rationale.md
docs/bronze/: raw_customer_data.csv  raw_product_data.csv  raw_transaction_data.csv
docs/gold/: customer_segmentation.csv  monthly_performance_metrics.csv  product_performance.csv
docs/silver/: enriched_products.csv  processed_customers.csv  processed_transactions.csv
infra/grafana/dashboards/: data_pipeline_dashboard.json  de_assistant_dashboard.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/prometheus/: prometheus.yml
mcp_servers/: filesystem_mcp_server.py
notebooks/: demo_walkthrough.ipynb
scripts/: generate_demo_data.py
slides/: deck.md
tests/: test_actions.py  test_chat_service.py  test_chunking.py
