[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "de-assistant"
version = "0.1.0"
description = "Conversational assistant for data engineering operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.44.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "chromadb>=0.5.5",
  "sentence-transformers>=3.0.0",
  "openai>=1.51.0",
  "pandas>=2.2.2",
  "prometheus-client>=0.20.0",
  "python-dotenv>=1.0.1",
  "mcp>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
